--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ button:hover { opacity:0.85; }
   <!-- Step 1: Name -->
   <div id="nameSection" class="section active">
     <h1>Welcome!</h1>
-    <p>Enter your name to continue:</p>
+    <p>Enter your name to continue(please use your actual name):</p>
     <input type="text" id="userNameInput" placeholder="Your name" />
     <button id="enterNameBtn">Next</button>
   </div>
@@ -97,7 +97,7 @@ button:hover { opacity:0.85; }
   <!-- Step 3: Thank You -->
   <div id="thankYouSection" class="section">
     <h1>Thanks for your message! 🎉</h1>
-    <p>Your message has been submitted successfully.</p>
+    <p>Your message has been submitted successfully :).</p>
   </div>
 
   <!-- Admin Messages -->
@@ -202,3 +202,4 @@ document.getElementById("adminBtn").addEventListener("click", async () => {
 </script>
 </body>
 </html>
+
