--- a/index.html
+++ b/index.html
@@ -6,115 +6,196 @@
 <title>Birthday Message Board</title>
 <style>
 :root {
-  --bg: #f5f5f5;
-  --card: #fff;
-  --accent: #6b7aff;
-  --text: #333;
-  --muted: #555;
-  --btn-bg: #6b7aff;
-  --btn-hover: #5661d2;
+  --bg: #1c1c1e;
+  --card: #2c2c2e;
+  --border: #3a3a3c;
+  --accent: #f2f2f2;
+  --muted: #a0a0a0;
 }
 body {
   background: var(--bg);
-  font-family: Arial, sans-serif;
+  color: var(--accent);
+  font-family: 'Inter', sans-serif;
   display: flex;
   justify-content: center;
   padding: 40px 20px;
   min-height: 100vh;
-  color: var(--text);
 }
 .container {
-  background: var(--card);
-  border-radius: 12px;
-  padding: 30px;
-  max-width: 700px;
+  max-width: 800px;
   width: 100%;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+}
+.section { display: none; }
+.section.active { display: block; }
+
+input, textarea, button {
+  width:100%; padding:12px; border-radius:8px; border:1px solid var(--border);
+  font-size:1rem; margin-bottom:15px; background:#2c2c2e; color:var(--accent);
+}
+input:focus, textarea:focus { outline:none; border-color:var(--accent); }
+textarea { min-height:80px; resize:vertical; }
+button { cursor:pointer; border:none; font-weight:600; }
+#enterNameBtn, #submitMsgBtn, #nextPhotoBtn, #finalSubmitBtn, #backToPhotoBtn {
+  background: var(--accent); color: var(--bg);
+}
+#enterNameBtn:hover, #submitMsgBtn:hover, #nextPhotoBtn:hover, #finalSubmitBtn:hover, #backToPhotoBtn:hover {
+  opacity:0.85;
+}
+
+/* Image Upload Buttons */
+.photo-btn {
+  display:flex; justify-content:center; align-items:center;
+  border: 2px dashed var(--accent);
+  background: transparent; color:var(--accent);
+  font-size:1rem; border-radius:10px;
+  height:200px; margin-bottom:15px; cursor:pointer; position:relative;
+  overflow:hidden;
+}
+.photo-btn input { display:none; }
+.photo-btn img {
+  width:100%; height:100%; object-fit:cover;
+  position:absolute; top:0; left:0; border-radius:10px;
+}
+.photo-btn span {
+  font-size:2rem; z-index:2; position:relative;
+  pointer-events:none;
+  background:rgba(0,0,0,0.3); padding:5px 15px; border-radius:8px;
+}
+
+.preview-img {
+  width:100%; max-height:400px; object-fit:cover; border-radius:10px; margin-bottom:10px;
+  display:block; margin:auto;
+}
+.message-text-preview {
+  background:#29292c; color:white; padding:10px; border-radius:6px; margin-top:10px;
   text-align:center;
 }
-h1 { margin-bottom:15px; }
-p { color:var(--muted); margin-bottom:20px; }
-input, textarea, button { width:100%; padding:12px; border-radius:8px; border:1px solid #ccc; margin-bottom:15px; font-size:1rem; }
-input:focus, textarea:focus { outline:none; border-color:var(--accent); }
-textarea { resize:vertical; min-height:80px; }
-button { background: var(--btn-bg); color:white; border:none; cursor:pointer; transition:0.2s; }
-button:hover { background: var(--btn-hover); }
-.section { display:none; }
-.section.active { display:block; }
-.photo-preview img { max-width:100px; max-height:100px; margin:5px; border-radius:6px; border:1px solid #ccc; }
-.slideshow-container { position:relative; margin-top:15px; }
-.slide { display:none; border:1px solid #ccc; border-radius:8px; padding:10px; background:#f0f0f0; }
-.slide img { max-width:100%; border-radius:6px; }
-.nav-btn { background:var(--btn-bg); color:white; border:none; padding:10px 15px; border-radius:6px; cursor:pointer; margin:5px; }
-.nav-btn:hover { background:var(--btn-hover); }
-.message-preview { background:#eaeaea; padding:10px; border-radius:6px; margin-top:10px; white-space:pre-wrap; text-align:left; }
-.admin-section { margin-top:20px; text-align:left; }
-.admin-message { border-bottom:1px solid #ccc; padding:10px 0; }
-.delete-btn { background:#f44336; color:white; border:none; padding:5px 10px; border-radius:6px; cursor:pointer; }
+.gallery-container { display:flex; flex-direction:column; gap:20px; }
+
+.arrow {
+  position: absolute; top:50%; transform:translateY(-50%);
+  font-size:2rem; color:white;
+  background: rgba(0,0,0,0.3); width:38px; height:38px; border-radius:50%;
+  display:flex; justify-content:center; align-items:center; cursor:pointer; z-index:10;
+}
+.arrow:hover { background: rgba(0,0,0,0.5); }
+.arrow-left { left:10px; }
+.arrow-right { right:10px; }
+
+.messages-layout {
+  display: flex;
+  gap: 20px;
+  margin-top: 30px;
+}
+.name-list {
+  width: 200px;
+  background: var(--card);
+  padding: 15px;
+  border-radius: 10px;
+  height: 80vh;
+  overflow-y: auto;
+}
+.name-item {
+  padding: 10px;
+  border-bottom: 1px solid var(--border);
+  cursor: pointer;
+}
+.name-item:hover {
+  background: rgba(255,255,255,0.1);
+}
+.main-gallery {
+  flex: 1;
+  background: var(--card);
+  border-radius: 10px;
+  padding: 20px;
+  overflow-y: auto;
+  height: 80vh;
+}
+.preview-box {
+  background: #2c2c2e;
+  border-radius: 12px;
+  padding: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.preview-box img {
+  width: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+  margin-bottom: 10px;
+}
+.preview-name {
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+.delete-btn {
+  background:#f44336;
+  color:white;
+  border:none;
+  border-radius:6px;
+  padding:5px 10px;
+  cursor:pointer;
+  margin-top:5px;
+}
 .delete-btn:hover { background:#d32f2f; }
+
 </style>
 </head>
 <body>
 <div class="container">
+  <button id="adminBtn">Admin View</button>
 
-  <!-- Step 1: Name -->
+  <!-- Step 1 -->
   <div id="nameSection" class="section active">
-    <h1>Birthday Message 🎉</h1>
+    <h1>Welcome!</h1>
     <p>Enter your name to continue:</p>
-    <input type="text" id="userNameInput" placeholder="Your name" />
+    <input type="text" id="userNameInput" placeholder="Your name">
     <button id="enterNameBtn">Next</button>
   </div>
 
-  <!-- Step 2: Message -->
+  <!-- Step 2 -->
   <div id="messageSection" class="section">
-    <h1>Write Your Message</h1>
+    <h1>Leave a Message</h1>
     <textarea id="messageInput" placeholder="Your message..."></textarea>
-    <button id="nextToPhotoBtn">Next</button>
-    <button id="backToNameBtn">Back</button>
+    <button id="submitMsgBtn">Next</button>
   </div>
 
-  <!-- Step 3: Photo Upload -->
+  <!-- Step 3 -->
   <div id="photoSection" class="section">
-    <h1>Add Photos (optional, max 3)</h1>
-    <label style="cursor:pointer; background: var(--btn-bg); color:white; padding:10px; border-radius:8px; display:inline-block;">
-      Select Photos
-      <input type="file" id="photoInput" accept="image/*" multiple style="display:none;">
-    </label>
-    <div class="photo-preview" id="photoPreview"></div>
-    <button id="nextToPreviewBtn">Preview</button>
-    <button id="backToMessageBtn">Back</button>
+    <h1>Add Photos (max 3)</h1>
+    <div id="photoButtons"></div>
+    <button id="nextPhotoBtn">Preview</button>
+    <button id="skipBtn">Skip</button>
   </div>
 
-  <!-- Step 4: Preview -->
+  <!-- Step 4 -->
   <div id="previewSection" class="section">
-    <h1>Preview Your Message</h1>
-    <div id="previewName"></div>
-    <div class="message-preview" id="previewMessage"></div>
-    <div class="slideshow-container" id="previewSlideshow"></div>
-    <button id="submitBtn">Submit</button>
+    <h1>Preview</h1>
+    <div id="previewGallery" style="position:relative;"></div>
+    <button id="finalSubmitBtn">Submit</button>
     <button id="backToPhotoBtn">Back</button>
   </div>
 
-  <!-- Step 5: Thank You -->
+  <!-- Step 5 -->
   <div id="thankYouSection" class="section">
-    <h1>Thanks! 🎉</h1>
-    <p>Your birthday message has been sent.</p>
+    <h1>Thanks for your message! 🎉</h1>
+    <p>Your message has been submitted successfully.</p>
   </div>
 
-  <!-- Admin Section -->
-  <div id="adminSection" class="section admin-section">
-    <h1>Admin View</h1>
-    <button id="backToStartAdminBtn">Back to Start</button>
-    <div id="adminMessages"></div>
+  <!-- Admin -->
+  <div id="adminSection" class="section">
+    <div class="messages-layout">
+      <div class="name-list" id="nameList"></div>
+      <div class="main-gallery" id="adminGallery"></div>
+    </div>
   </div>
-
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
 import { getDatabase, ref, push, get, remove, child } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
-// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyDFNxj9dXHwC3gZ__pxlPzVObaq3pYXsHU",
   authDomain: "message-board-11427.firebaseapp.com",
@@ -124,134 +205,178 @@ const firebaseConfig = {
   messagingSenderId: "1025990128029",
   appId: "1:1025990128029:web:8fac79b3115d113b283f74"
 };
-
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 
 let userName = "";
-let messageText = "";
-let photoFiles = [];
-let currentSlide = 0;
+let userMessage = "";
+let userPhotos = [null,null,null];
+let currentPreview = 0;
 const ADMIN_PASSCODE = "8080";
 
-// --- Step Navigation ---
-function showSection(sectionId){
-  document.querySelectorAll(".section").forEach(s => s.classList.remove("active"));
-  document.getElementById(sectionId).classList.add("active");
-}
-
-// Step1
+// Step 1
 document.getElementById("enterNameBtn").addEventListener("click", ()=>{
-  const val = document.getElementById("userNameInput").value.trim();
-  if(!val) return alert("Please enter your name");
-  userName = val;
-  showSection("messageSection");
+  const name = document.getElementById("userNameInput").value.trim();
+  if(!name) return alert("Enter name");
+  userName = name;
+  document.getElementById("nameSection").classList.remove("active");
+  document.getElementById("messageSection").classList.add("active");
 });
 
-// Step2
-document.getElementById("nextToPhotoBtn").addEventListener("click", ()=>{
-  const val = document.getElementById("messageInput").value.trim();
-  if(!val) return alert("Please enter a message");
-  messageText = val;
-  showSection("photoSection");
-});
-document.getElementById("backToNameBtn").addEventListener("click", ()=>showSection("nameSection"));
-
-// Step3
-const photoInput = document.getElementById("photoInput");
-const photoPreview = document.getElementById("photoPreview");
-
-photoInput.addEventListener("change", ()=>{
-  photoFiles = Array.from(photoInput.files).slice(0,3);
-  photoPreview.innerHTML = "";
-  photoFiles.forEach(f=>{
-    const img = document.createElement("img");
-    img.src = URL.createObjectURL(f);
-    photoPreview.appendChild(img);
-  });
+// Step 2
+document.getElementById("submitMsgBtn").addEventListener("click", ()=>{
+  const msg = document.getElementById("messageInput").value.trim();
+  if(!msg) return alert("Enter message");
+  userMessage = msg;
+  setupPhotoButtons();
+  document.getElementById("messageSection").classList.remove("active");
+  document.getElementById("photoSection").classList.add("active");
 });
 
-document.getElementById("nextToPreviewBtn").addEventListener("click", ()=>{
-  // Fill preview
-  document.getElementById("previewName").textContent = `From ${userName}`;
-  document.getElementById("previewMessage").textContent = messageText;
-
-  const slideshow = document.getElementById("previewSlideshow");
-  slideshow.innerHTML = "";
-  if(photoFiles.length === 0){
-    slideshow.textContent = "No photos added";
-  } else {
-    photoFiles.forEach((file,i)=>{
-      const div = document.createElement("div");
-      div.className="slide";
-      if(i===0) div.style.display="block";
-      const img = document.createElement("img");
-      img.src = URL.createObjectURL(file);
-      div.appendChild(img);
-      slideshow.appendChild(div);
-    });
-    if(photoFiles.length>1){
-      const prev = document.createElement("button");
-      prev.textContent="<";
-      prev.className="nav-btn";
-      prev.onclick=()=>showSlide(-1);
-      const next = document.createElement("button");
-      next.textContent=">";
-      next.className="nav-btn";
-      next.onclick=()=>showSlide(1);
-      slideshow.appendChild(prev);
-      slideshow.appendChild(next);
-    }
-    currentSlide = 0;
+// Step 3
+function setupPhotoButtons(){
+  const container = document.getElementById("photoButtons");
+  container.innerHTML = "";
+  for(let i=0;i<3;i++){
+    const btn = document.createElement("label");
+    btn.className="photo-btn";
+    btn.innerHTML=`<span>+ Add Image ${i+1}</span><input type="file" accept="image/*" data-index="${i}">`;
+    container.appendChild(btn);
   }
 
-  showSection("previewSection");
-});
-
-document.getElementById("backToMessageBtn").addEventListener("click", ()=>showSection("messageSection"));
-document.getElementById("backToPhotoBtn").addEventListener("click", ()=>showSection("photoSection"));
-
-// Slideshow navigation
-function showSlide(direction){
-  const slides = document.querySelectorAll("#previewSlideshow .slide");
-  slides[currentSlide].style.display="none";
-  currentSlide=(currentSlide+direction+slides.length)%slides.length;
-  slides[currentSlide].style.display="block";
+  document.querySelectorAll(".photo-btn input").forEach(input=>{
+    input.addEventListener("change", e=>{
+      const file = e.target.files[0];
+      const index = e.target.dataset.index;
+      if(file){
+        const reader = new FileReader();
+        reader.onload = ()=>{
+          userPhotos[index] = reader.result;
+          const label = e.target.parentElement;
+          label.innerHTML = `<img src="${reader.result}" alt="Photo ${index+1}"><input type="file" accept="image/*" data-index="${index}">`;
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+  });
 }
 
-// Step4: Submit
-document.getElementById("submitBtn").addEventListener("click", async ()=>{
-  const readerPromises = photoFiles.map(f=>new Promise(res=>{
-    const fr = new FileReader();
-    fr.onload = ()=>res(fr.result);
-    fr.readAsDataURL(f);
-  }));
-  const photoData = await Promise.all(readerPromises);
+document.getElementById("nextPhotoBtn").addEventListener("click", ()=>{
+  showPreview();
+  document.getElementById("photoSection").classList.remove("active");
+  document.getElementById("previewSection").classList.add("active");
+});
+document.getElementById("skipBtn").addEventListener("click", ()=>{
+  showPreview();
+  document.getElementById("photoSection").classList.remove("active");
+  document.getElementById("previewSection").classList.add("active");
+});
 
+// Step 4
+function showPreview(){
+  const gallery = document.getElementById("previewGallery");
+  gallery.innerHTML = "";
+  const images = userPhotos.filter(p=>p);
+  if(images.length === 0){
+    const msgDiv = document.createElement("div");
+    msgDiv.className = "message-text-preview";
+    msgDiv.textContent = userMessage;
+    gallery.innerHTML = `<h2 class="preview-name">From: ${userName}</h2>`;
+    gallery.appendChild(msgDiv);
+    return;
+  }
+
+  const img = document.createElement("img");
+  img.src = images[currentPreview];
+  img.className = "preview-img";
+  gallery.innerHTML = `<h2 class="preview-name">From: ${userName}</h2>`;
+  gallery.appendChild(img);
+  const msgDiv = document.createElement("div");
+  msgDiv.className = "message-text-preview";
+  msgDiv.textContent = userMessage;
+  gallery.appendChild(msgDiv);
+
+  if(images.length > 1){
+    const left = document.createElement("button");
+    left.innerHTML="&#10094;";
+    left.className="arrow arrow-left";
+    left.onclick=()=>{currentPreview=(currentPreview-1+images.length)%images.length; showPreview();};
+    const right = document.createElement("button");
+    right.innerHTML="&#10095;";
+    right.className="arrow arrow-right";
+    right.onclick=()=>{currentPreview=(currentPreview+1)%images.length; showPreview();};
+    gallery.appendChild(left);
+    gallery.appendChild(right);
+  }
+}
+
+document.getElementById("backToPhotoBtn").addEventListener("click", ()=>{
+  document.getElementById("previewSection").classList.remove("active");
+  document.getElementById("photoSection").classList.add("active");
+});
+
+// Submit
+document.getElementById("finalSubmitBtn").addEventListener("click", async ()=>{
   await push(ref(db,"messages"),{
-    name: userName,
-    message: messageText,
-    photos: photoData,
-    timestamp: new Date().toISOString()
+    name:userName,
+    message:userMessage,
+    photos:userPhotos.filter(p=>p),
+    timestamp:new Date().toISOString()
   });
-
-  showSection("thankYouSection");
+  document.getElementById("previewSection").classList.remove("active");
+  document.getElementById("thankYouSection").classList.add("active");
 });
 
 // Admin
-function loadAdmin(){
+document.getElementById("adminBtn").addEventListener("click", async ()=>{
   const code = prompt("Enter admin passcode:");
-  if(code!==ADMIN_PASSCODE) return alert("Incorrect passcode!");
-  const adminDiv = document.getElementById("adminMessages");
-  adminDiv.innerHTML = "";
-  get(ref(db,"messages")).then(snapshot=>{
-    const msgs = snapshot.exists()? snapshot.val() : {};
-    if(Object.keys(msgs).length===0){
-      adminDiv.innerHTML="<p>Nothing here.</p>";
-    }
-    Object.entries(msgs).sort((a,b)=>new Date(b[1].timestamp)-new Date(a[1].timestamp))
-      .forEach(([key,msg])=>{
-        const div = document.createElement("div");
-        div.className="admin-message";
-        const photosHTML = msg.photos?.map(p=>`<img src="${p}" style="max-width:80px; margin:5px; border-radius:4px;">`).join("")||"";
-        div.innerHTML=`<strong>From ${
+  if(code!==ADMIN_PASSCODE) return alert("Incorrect");
+  document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
+  document.getElementById("adminSection").classList.add("active");
+
+  const snapshot = await get(ref(db,"messages"));
+  const messages = snapshot.exists()?snapshot.val():{};
+  const nameList = document.getElementById("nameList");
+  const adminGallery = document.getElementById("adminGallery");
+  nameList.innerHTML = "";
+  adminGallery.innerHTML = "<p>Select a name to view their message</p>";
+
+  Object.entries(messages).forEach(([key,msg])=>{
+    const item = document.createElement("div");
+    item.className = "name-item";
+    item.textContent = msg.name;
+    item.onclick = ()=>{
+      adminGallery.innerHTML = "";
+      const box = document.createElement("div");
+      box.className = "preview-box";
+      box.innerHTML = `<div class="preview-name">From: ${msg.name}</div>`;
+      if(msg.photos){
+        msg.photos.forEach(p=>{
+          const img = document.createElement("img");
+          img.src = p;
+          box.appendChild(img);
+        });
+      }
+      const messageText = document.createElement("div");
+      messageText.className = "message-text-preview";
+      messageText.textContent = msg.message;
+      box.appendChild(messageText);
+      const delBtn = document.crea teElement("button");
+      delBtn.className = "delete-btn";
+      delBtn.textContent = "Delete";
+      delBtn.onclick = async ()=>{
+        if(confirm("Delete this message?")){
+          await remove(child(ref(db,"messages"),key));
+          item.remove();
+          adminGallery.innerHTML="<p>Deleted.</p>";
+        }
+      };
+      box.appendChild(delBtn);
+      adminGallery.appendChild(box);
+    };
+    nameList.appendChild(item);
+  });
+});
+</script>
+</body>
+</html>
